--- a/yaml-to-json/Cargo.toml
+++ b/yaml-to-json/Cargo.toml
@@ -4,9 +4,13 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+atty = "0.2.14"
 clap = { version = "3.2", features = ["derive"] }
+colorize_json = { path = "../colorize_json" }
+serde = "1.0.137"
 serde_json = "1"
 serde_yaml = "0"
+termcolor = "1.1.3"
 
 [[bin]]
 name = "y2j"
